--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,22 @@
 {
-  "name": "angular-module-shim",
-  "main": "angular-module-shim.js",
-  "version": "0.0.4",
+  "name": "angular-module-tree",
+  "main": "dist/angular-module-tree.js",
+  "version": "1.0.0",
   "authors": [
-    "jedrichards <jedrichards@gmail.com>"
+    "j <j@touk.pl>"
   ],
-  "description": "Adjusts the behaviour of angular.module so as to make module retrieval and creation order agnostic",
+  "description": "",
   "moduleType": [
     "globals"
   ],
   "dependencies": {
-    "angular": "~1.2.16"
+    "angular": ">= 1.2 < 1.5",
+    "angular-mocks": ">= 1.2 < 1.5"
   },
   "keywords": [
     "angular",
     "module",
-    "shim"
+    "tree"
   ],
   "license": "MIT",
   "ignore": [
