--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "authors": [
     "j <j@touk.pl>"
   ],
-  "description": "",
+  "description": "angular modules tree",
   "moduleType": [
     "globals"
   ],
