--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-module-tree",
   "main": "dist/angular-module-tree.js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "authors": [
     "j <j@touk.pl>"
   ],
@@ -10,7 +10,9 @@
     "globals"
   ],
   "dependencies": {
-    "angular": ">= 1.2 < 1.5",
+    "angular": ">= 1.2 < 1.5"
+  },
+  "devDependencies": {
     "angular-mocks": ">= 1.2 < 1.5"
   },
   "keywords": [
