--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-module-tree",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "### Install",
   "main": "dist/angular-module-tree.js",
   "scripts": {
@@ -19,6 +19,10 @@
   "devDependencies": {
     "coffee-script": "^1.9.2",
     "gulp": "^3.8.11",
+    "gulp-bump": "^0.3.0",
+    "gulp-filter": "^2.0.2",
+    "gulp-git": "^1.2.1",
+    "gulp-tag-version": "^1.2.1",
     "gulp-coffee": "^2.3.1",
     "gulp-karma": "0.0.4",
     "gulp-plumber": "^1.0.0",
